--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-tomoko",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "tomoko 脚手架",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "Peter-WF",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.1.2",
     "yeoman-generator": "^0.24.1"
   }
 }
