--- a/package.json
+++ b/package.json
@@ -1,15 +1,51 @@
 {
   "name": "generator-tomoko",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "tomoko 脚手架",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "author": {
+    "name": "王斐",
+    "email": "wangfeia@zbj.com",
+    "url": ""
   },
-  "author": "Peter-WF",
-  "license": "ISC",
+  "files": [
+    "generators"
+  ],
+  "main": "generators/index.js",
+  "keywords": [
+    "tomoko 脚手架",
+    "yeoman-generator"
+  ],
   "dependencies": {
-    "colors": "^1.1.2",
-    "yeoman-generator": "^0.24.1"
-  }
+    "yeoman-generator": "^0.23.0",
+    "chalk": "^1.0.0",
+    "yosay": "^1.0.0",
+    "colors": "^1.1.2"
+  },
+  "devDependencies": {
+    "yeoman-test": "^1.0.0",
+    "yeoman-assert": "^2.0.0",
+    "eslint": "^3.1.1",
+    "eslint-config-xo-space": "^0.14.0",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^2.0.0",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
+    "gulp-istanbul": "^1.0.0",
+    "gulp-mocha": "^2.0.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-nsp": "^2.1.0",
+    "gulp-coveralls": "^0.1.0"
+  },
+  "eslintConfig": {
+    "extends": "xo-space",
+    "env": {
+      "mocha": true
+    }
+  },
+  "repository": "Peter-WF/generator-tomoko",
+  "scripts": {
+    "prepublish": "gulp prepublish",
+    "test": "gulp"
+  },
+  "license": "MIT"
 }
