--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
-/app/templates/node_modules
+# ignore dependencies
+/node_modules
+/bower_components
+
 /npm-debug.log
+
+*.db
+*.bak
+*.tmp
+*.cmd
+~*
+
+# Mac crap
+.DS_Store
+
+# WebStorm
+.idea/**/*
 .idea/**
-node_modules/**
+
+
+# generator
+/generators/app/templates/node_modules
 coverage
+
+# 单元测试 demo
+/test/output/**/*
+/test/output/**
